k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indexer-tools
  namespace: indexer-tools
  labels:
    app: indexer-tools
spec:
  type: ClusterIP
  selector:
    app: indexer-tools
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
